--- a/index.html
+++ b/index.html
@@ -12,12 +12,37 @@
 <body>
     <section class="top-banner">
         <div class="header-section">
-            <!-- <h1> Let's Help Those Who Are </h1>
+            <h1> Let's Help Those Who Are </h1>
             <h1>More In Need</h1>
-            <p>Children who grow up impoverished often lack the food, sanitation, shelter, health care and education they need to survive and thrive.</p>
-            <a href="">DONATE HERE</a> -->
+            <p class="start">Children who grow up impoverished often lack the food, <br> sanitation, shelter, health care and education <br> they need to survive and thrive.</p> 
+            <a class="button" target="_blank" href="">DONATE HERE</a> 
         </div>
     </section>
+   
+        <h1 class="today">Donate Today</h1>
+        <p class="middle">Become a supporter if you are motivated & ready to support real people. <br> This is the simplest and quickest way to make a donation. <br>it feels good to give. We help the needy!</p>
     
+    <section class="donate-taka">
+        <div class="money-s">100tk</div>
+        <div class="money-a">200tk</div>
+        <div class="money-t">500tk</div>
+        <div class="money-h">1000tk</div>
+        <div class="money-i">5000tk</div>
+    </section>
+    <p class="blind">Other amount (Taka) </p>
+    <hr> <br><br>
+     <a class="button-two" target="blank" href="">DONATE NOW</a>
+     
+     <div class="plan">
+        <h1 class="today">Our Donate Plan</h1>
+        <p class="middle">Kids can take action to help the <br>poor and needy in their local community or in other lands. <br> Kids can get their family to donate money, <br> or get together with others to hold a fund-raising drive.</p>
+     </div>
+     <section class="need">
+        <div class="plan-a">
+            <h2>Food for a child</h2>
+        </div>
+        <div class="plan-b"></div>
+        <div class="plan-c"></div>
+     </section>
 </body>
 </html>
